--- a/main/main.css
+++ b/main/main.css
@@ -159,9 +159,15 @@ nav .left {
 nav .left .logo {
   height: 5vh;
   width: 30%;
-  background: url("https://upload.wikimedia.org/wikipedia/en/thumb/4/47/FC_Barcelona_%28crest%29.svg/1200px-FC_Barcelona_%28crest%29.svg.png") no-repeat center center;
+  background: url("https://upload.wikimedia.org/wikipedia/en/thumb/4/47/FC_Barcelona_%28crest%29.svg/1200px-FC_Barcelona_%28crest%29.svg.png") no-repeat center;
   background-size: cover;
   position: relative;
+}
+
+@media screen and (max-width: 900px) {
+  nav .left .logo {
+    height: 6vh;
+  }
 }
 
 nav .right {
@@ -334,7 +340,7 @@ header {
 
 .containerTwo .flexItems {
   height: 50vh;
-  background-color: white;
+  background-color: #f0f0f0;
   min-width: 25%;
 }
 
@@ -551,13 +557,13 @@ header {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  overflow-x: scroll;
+  overflow-y: hidden;
 }
 
 .items1 {
   height: 80%;
-  -webkit-box-flex: 3;
-      -ms-flex: 3;
-          flex: 3;
+  min-width: 25%;
   background: url("https://store.fcbarcelona.com/medias/MiniBanners-1.jpg?context=bWFzdGVyfHJvb3R8MTE3NDc2fGltYWdlL2pwZWd8aDEyL2gyNi84OTExNTk0NDg3ODM4L01pbmlCYW5uZXJzXzEuanBnfGQ2OTIwYzFkZDBlZjk4NDZjYTA1ZjdhMTZlNDY0YjNkNzRhOWI1N2Q0NzIzMWIwY2RiNmNjYzYwYzA2N2EwMjc") no-repeat center center;
   background-size: cover;
   position: relative;
@@ -573,7 +579,8 @@ header {
   padding-top: 12%;
 }
 
-.items1 span {
+.items1 c
+span {
   background-color: #fff;
   width: 90%;
   padding: 5%;
@@ -584,6 +591,7 @@ header {
 
 .items2 {
   height: 80%;
+  min-width: 25%;
   -webkit-box-flex: 3;
       -ms-flex: 3;
           flex: 3;
@@ -602,6 +610,12 @@ header {
   padding-top: 12%;
 }
 
+@media screen and (max-width: 900px) {
+  .items2 {
+    min-width: 75%;
+  }
+}
+
 .items2 span {
   background-color: #fff;
   width: 90%;
@@ -613,6 +627,7 @@ header {
 
 .items3 {
   height: 80%;
+  min-width: 25%;
   -webkit-box-flex: 3;
       -ms-flex: 3;
           flex: 3;
@@ -631,6 +646,12 @@ header {
   padding-top: 12%;
 }
 
+@media screen and (max-width: 900px) {
+  .items3 {
+    min-width: 75%;
+  }
+}
+
 .items3 span {
   background-color: #fff;
   width: 90%;
@@ -642,6 +663,7 @@ header {
 
 .items4 {
   height: 80%;
+  min-width: 25%;
   -webkit-box-flex: 3;
       -ms-flex: 3;
           flex: 3;
@@ -658,6 +680,12 @@ header {
       -ms-flex-align: center;
           align-items: center;
   padding-top: 12%;
+}
+
+@media screen and (max-width: 900px) {
+  .items4 {
+    min-width: 75%;
+  }
 }
 
 .items4 span {
@@ -681,6 +709,16 @@ footer {
       -ms-flex-pack: center;
           justify-content: center;
   color: #fff;
+}
+
+@media screen and (max-width: 900px) {
+  footer {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    height: 100vh;
+  }
 }
 
 footer .one {
@@ -707,6 +745,13 @@ footer .two {
           flex: 6;
 }
 
+@media screen and (max-width: 900px) {
+  footer .two {
+    margin-left: 10%;
+    margin-top: 5%;
+  }
+}
+
 footer .two li {
   margin-top: 7%;
   font-size: .8rem;
@@ -718,6 +763,13 @@ footer .three {
   -webkit-box-flex: 6;
       -ms-flex: 6;
           flex: 6;
+}
+
+@media screen and (max-width: 900px) {
+  footer .three {
+    margin-left: 10%;
+    margin-top: -25%;
+  }
 }
 
 footer .three .icons {
